submenus shouldn't go off the screen. b=367260 r=cbarrett sr=pav